--- a/css/layout.css
+++ b/css/layout.css
@@ -1,6 +1,7 @@
 html,
 body {
-    background-color: #F3FAF9;
+    background-color: #f0f8f7;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .pure-u-1-3 {
@@ -22,9 +23,4 @@ h1 {
 p {
     color: #527298;
     font-size: 16px;
-}
-
-#bar_chart {
-    width: 90%;
-    height: 90%
 }
